adding people and blog pages

--- a/navbar.html
+++ b/navbar.html
@@ -6,9 +6,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="about.html">About</a>
-            <a class="nav-item nav-link" href="workwithme.html">Collaboration</a>
-            <a class="nav-item nav-link" href="writings.html">Writings</a>
+            <a class="nav-item nav-link" href="people.html">People</a>
+            <a class="nav-item nav-link" href="blog.html">Blog</a>
         </div>
     </div>
 </nav>
