--- a/people.html
+++ b/people.html
@@ -19,47 +19,73 @@
     </script>
     <div id="people">
         <br><br><br>
-        <div class='figure align-center'>
-            <a href=./anscombes_quartet.html> <img src=../_static/anscombes_quartet_thumb.png?v=0.9.0> <span
-                class='figure-label'>
-                <p>lmplot</p>
-                </span>
-            </a>
+
+        <div class='person'>
+            <img src="images/penguin.png">
+            <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
         </div>
-        <div class='figure align-center'>
-            <a href=./color_palettes.html> <img src=../_static/color_palettes_thumb.png?v=0.9.0> <span
-                class='figure-label'>
-                <p>barplot</p>
-                </span>
-            </a>
+
+        <div class='person'>
+            <img src="images/penguin.png">
+            <div class="bio">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
+            </div>
         </div>
-        <div class='figure align-center'>
-            <a href=./cubehelix_palette.html> <img src=../_static/cubehelix_palette_thumb.png?v=0.9.0> <span
-                class='figure-label'>
-                <p>kdeplot</p>
-                </span>
-            </a>
+
+        <div class='person'>
+            <img src="images/penguin.png">
+            <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
         </div>
-        <div class='figure align-center'>
-            <a href=./different_scatter_variables.html> <img
-                src=../_static/different_scatter_variables_thumb.png?v=0.9.0> <span class='figure-label'>
-                <p>scatterplot</p>
-                </span>
-            </a>
+
+        <div class='person'>
+            <img src="images/penguin.png">
+            <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
         </div>
-        <div class='figure align-center'>
-            <a href=./distplot_options.html> <img src=../_static/distplot_options_thumb.png?v=0.9.0> <span
-                class='figure-label'>
-                <p>distplot</p>
-                </span>
-            </a>
+
+        <div class='person'>
+            <img src="images/penguin.png">
+            <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
         </div>
+
+        <div class='person'> 
+            <img src="images/penguin.png">
+            <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+        </div>
+
     </div>
 
 
     </div>
 </body>
-<script src="js/lizzie.js"></script>
+<!-- <script src="js/lizzie.js"></script> -->
 
 
 </html>
