--- a/blog.html
+++ b/blog.html
@@ -20,8 +20,13 @@
 
     <div id="figure">
     </div>
+
+    <div id="footer-placeholder"></div>
+    <script>
+        $(function () {
+            $("#footer-placeholder").load("footer.html")
+        })
+    </script>
+    
 </body>
-<script src="js/lizzie.js"></script>
-
-
 </html>
