--- a/index.html
+++ b/index.html
@@ -28,37 +28,43 @@
             experience levels. If you're starting from scratch, that's great. If you're already a pro, that's great,
             too. Come make some awesome data art, ask questions, give help, or show-and-tell your latest project.
             <br><br>
-            <ul>
-                <item>
-                    sfasdf
-                </item>
-                <i style="font-size:24px">If what you want doesn't exist, build it.</i>
-            </ul>
-
-            <br><br>
             Data Viz Jam Sessions This is a relaxed group for data visualization enthusiasts looking for inspiration,
             camaraderie, and collaboration. We're language-agnostic, multidisciplinary, and open to all skill and
             experience levels. If you're starting from scratch, that's great. If you're already a pro, that's great,
             too. Come make some awesome data art, ask questions, give help, or show-and-tell your latest project.
         </div>
-        <br><br>
 
         <div class="contentbox">
             <h2>Thanks to our supporters!</h2>
-            DVJS the product of amazing community support and some particularly awesome sponsors. Infinite thanks to everyone who has contributed to this endeavor. In particular...
+            DVJS the product of amazing community support and some particularly awesome sponsors. Infinite thanks to
+            everyone who has contributed to this endeavor. In particular...
             <br><br>
-            <img src="images/rstudio.png" style="height:80px;float:left;margin-right:20px;">
-            RStudio has supported us since 2016. In addition to keeping the lights on they've graced us with plentiful hex stickers and an unparalleled street cred. We wear our partnership proudly!
-            <br><br>
-            <img src="images/plotly.png" style="height:100px;float:left;margin-right:20px;">
-            Plotly, based in Montreal, joined our data viz family in 2017. We are thrilled to collaborate with such a creative mover-and-shaker in the business. 
-            <br><br>
-        
+            <div id="sponsors">
+                <div style="width:40%;float:left;flex:1">
+                    <img src="images/rstudio.png" style="height:130px;float:left;margin-right:20px;">
+                    RStudio has supported us since 2016. In addition to keeping the lights on they've graced us with
+                    plentiful
+                    hex stickers and an unparalleled street cred. We wear our partnership proudly!
+                </div>
+                <div style="width:40%;float:right;flex:1">
+                        <img src="images/plotly.png" style="height:130px;float:left;margin-right:20px;">
+                    Plotly, based in Montreal, joined our data viz family in 2017. We are thrilled to collaborate with
+                    such
+                    a
+                    creative mover-and-shaker in the business.
+                </div>
             </div>
+        </div>
     </div>
 
-
+    <div id="footer-placeholder"></div>
+    <script>
+        $(function () {
+            $("#footer-placeholder").load("footer.html")
+        })
+    </script>
 </body>
+
 
 
 </html>
