--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<img src="images/blank.png" style="height:85px;width:80vw;position:fixed;margin-left:20vw">
+<!-- <img src="images/blank.png" style="height:85px;width:80vw;position:fixed;margin-left:20vw"> -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
