--- a/people.html
+++ b/people.html
@@ -17,62 +17,60 @@
             $("#nav-placeholder").load("navbar.html")
         })
     </script>
-
+<div>
     <div id="leaders">
-            <br><br><br>
-
-            <h2>Our Organizers</h2>
-            <div class="person seattle">
-                <img src="images/portrait.png">
-                <div class="bio">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </div>
+        <br><br><br>
+        <h2>Our Organizers</h2>
+        <div class="person seattle">
+            <img src="images/portrait.png">
+            <div class="bio">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
             </div>
+        </div>
 
-            <div class="person montreal">
-                    <img src="images/flag.png">
-                    <div class="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                </div>
+        <div class="person montreal">
+            <img src="images/flag.png">
+            <div class="bio">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
+            </div>
+        </div>
 
     </div>
 
     <div id="facilitators">
-            <br><br><br>
-
-            <h2>Community Facilitators</h2>
-            <div class="person">
-                <img src="images/seal.jpg">
-                <div class="bio">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </div>
+        <br><br><br>
+        <h2>Community Facilitators</h2>
+        <div class="person">
+            <img src="images/seal.jpg">
+            <div class="bio">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
             </div>
+        </div>
 
-            <div class="person">
-                    <img src="images/seal.jpg">
-                    <div class="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                </div>
+        <div class="person">
+            <img src="images/seal.jpg">
+            <div class="bio">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
+            </div>
+        </div>
 
     </div>
 
+    <br><br><br>
     <div id="people">
         <br><br><br>
-
         <h2>The Community</h2>
 
         <div class='person'>
@@ -134,11 +132,16 @@
                 laboris nisi ut aliquip ex ea commodo consequat.
             </div>
         </div>
-
     </div>
-
-
     </div>
+    <br><br><br>
+
+    <div id="footer-placeholder"></div>
+    <script>
+        $(function () {
+            $("#footer-placeholder").load("footer.html")
+        })
+    </script>
 </body>
 <!-- <script src="js/lizzie.js"></script> -->
 
