picking font and styling nav/footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Arsenal|Assistant|Athiti|Black+And+White+Picture|Coda+Caption|Darker+Grotesque|Encode+Sans|Krona+One|Molengo|Nobile|Pavanam|Ramabhadra|Reem+Kufi|Thasadith&display=swap" rel="stylesheet">
 
 </head>
 
@@ -47,7 +48,7 @@
                     hex stickers and an unparalleled street cred. We wear our partnership proudly!
                 </div>
                 <div style="width:40%;float:right;flex:1">
-                        <img src="images/plotly.png" style="height:130px;float:left;margin-right:20px;">
+                    <img src="images/plotly.png" style="height:130px;float:left;margin-right:20px;">
                     Plotly, based in Montreal, joined our data viz family in 2017. We are thrilled to collaborate with
                     such
                     a
