--- a/people.html
+++ b/people.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link
+        href="https://fonts.googleapis.com/css?family=Arsenal|Assistant|Athiti|Black+And+White+Picture|Coda+Caption:800|Darker+Grotesque|Encode+Sans|Krona+One|Molengo|Nobile|Pavanam|Ramabhadra|Reem+Kufi|Thasadith&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -17,122 +21,128 @@
             $("#nav-placeholder").load("navbar.html")
         })
     </script>
-<div>
-    <div id="leaders">
-        <br><br><br>
-        <h2>Our Organizers</h2>
-        <div class="person seattle">
-            <img src="images/portrait.png">
-            <div class="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-        </div>
-
-        <div class="person montreal">
-            <img src="images/flag.png">
-            <div class="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-        </div>
-
-    </div>
-
-    <div id="facilitators">
-        <br><br><br>
-        <h2>Community Facilitators</h2>
-        <div class="person">
-            <img src="images/seal.jpg">
-            <div class="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-        </div>
-
-        <div class="person">
-            <img src="images/seal.jpg">
-            <div class="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-        </div>
-
-    </div>
-
-    <br><br><br>
     <div id="people">
-        <br><br><br>
-        <h2>The Community</h2>
+        <div id="leaders">
+            <br><br><br>
+            <h2>Our Organizers</h2>
+            <div class="person seattle">
+                <img src="images/portrait.png">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+            </div>
 
-        <div class='person'>
-            <img src="images/penguin.png">
-            <div class="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
+            <div class="person montreal">
+                <img src="images/flag.png">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
             </div>
         </div>
 
-        <div class='person'>
-            <img src="images/penguin.png">
-            <div class="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
+        <div id="facilitators">
+            <br><br><br>
+            <h2>Community Facilitators</h2>
+            <div class="person">
+                <img src="images/seal.jpg">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+            </div>
+
+            <div class="person">
+                <img src="images/seal.jpg">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+            </div>
+
+            <div class="person">
+                <img src="images/seal.jpg">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
             </div>
         </div>
 
-        <div class='person'>
-            <img src="images/penguin.png">
-            <div class="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
+        <div id="community">
+            <br><br><br>
+            <h2>The Community</h2>
+            <div class='person'>
+                <img src="images/penguin.png">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
             </div>
-        </div>
 
-        <div class='person'>
-            <img src="images/penguin.png">
-            <div class="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
+            <div class='person'>
+                <img src="images/penguin.png">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
             </div>
-        </div>
 
-        <div class='person'>
-            <img src="images/penguin.png">
-            <div class="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
+            <div class='person'>
+                <img src="images/penguin.png">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
             </div>
-        </div>
 
-        <div class='person'>
-            <img src="images/penguin.png">
-            <div class="bio">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.
+            <div class='person'>
+                <img src="images/penguin.png">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+            </div>
+
+            <div class='person'>
+                <img src="images/penguin.png">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+            </div>
+
+            <div class='person'>
+                <img src="images/penguin.png">
+                <div class="bio">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
             </div>
         </div>
-    </div>
     </div>
     <br><br><br>
 
