--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
 <!-- <img src="images/blank.png" style="height:85px;width:80vw;position:fixed;margin-left:20vw"> -->
-
+<!-- <div style="background-color:#1B1862;height:50px"></div>     -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
