--- a/people.html
+++ b/people.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
     <link
         href="https://fonts.googleapis.com/css?family=Arsenal|Assistant|Athiti|Black+And+White+Picture|Coda+Caption:800|Darker+Grotesque|Encode+Sans|Krona+One|Molengo|Nobile|Pavanam|Ramabhadra|Reem+Kufi|Thasadith&display=swap"
         rel="stylesheet">
@@ -28,16 +30,15 @@
             <div class="person seattle">
                 <img src="images/portrait.png">
                 <div class="bio">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
+                    <div class="name">Nancy Organ </br> Founder and Seattle Organizer</div><br>
+                    Nancy started DVJS in June 2016 to create a space for the nascent data vis commuity to come together. She studied Statistics and Biology at UC Berkeley and started her career in Medical research. 
                 </div>
             </div>
 
             <div class="person montreal">
                 <img src="images/flag.png">
                 <div class="bio">
+                        <div class="name">Jess Renaud </br>Montreal Organizer</div>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -46,8 +47,8 @@
             </div>
         </div>
 
+
         <div id="facilitators">
-            <br><br><br>
             <h2>Community Facilitators</h2>
             <div class="person">
                 <img src="images/seal.jpg">
@@ -81,7 +82,6 @@
         </div>
 
         <div id="community">
-            <br><br><br>
             <h2>The Community</h2>
             <div class='person'>
                 <img src="images/penguin.png">
