Update image source to profile pic

--- a/people.html
+++ b/people.html
@@ -144,7 +144,7 @@
             </div>
 
             <div class='person'>
-                <img src="images/penguin.png">
+                <img src="images/agbales.jpg">
                 <div class="bio">
                     <div class="name">Andrew Bales</div>
                     <div class="portfolio"><a href="https://agbales.github.io/portfolio/"></a></div><br>
